--- a/app/src/sass/_home.scss
+++ b/app/src/sass/_home.scss
@@ -5,7 +5,10 @@
     background-size:cover;
     position: fixed;
     width:100%;
-    // z-index:0;
+    -webkit-transform:translateZ(0px);
+    -moz-transform:translateZ(0px);
+    -o-transform:translateZ(0px);
+    transform:translateZ(0px);
     height:100%;
     top:0;
 }
@@ -49,12 +52,12 @@
 {
     background-color: #f0f0f0;
     position: relative;
-    // z-index:1;
     padding-top:50px;
     -webkit-transform:translateZ(1px);
     -moz-transform:translateZ(1px);
     -o-transform:translateZ(1px);
     transform:translateZ(1px);
+
 
     .content-section
     {
@@ -74,6 +77,7 @@
 
     #google-analytics-background
     {
+        overflow:hidden;
 
         .content-section
         {
